# udacity

./: README.md  info.txt
Autonomous_Vehicles_and_Computer_Vision/Haris_Corner_Detection/: CMakeLists.txt  images
Autonomous_Vehicles_and_Computer_Vision/Haris_Corner_Detection/src/: cornerness_harris.cpp  describe_keypoints.cpp  descriptor_matching.cpp  descriptor_matching_solution.cpp  detect_keypoints.cpp
Autonomous_Vehicles_and_Computer_Vision/OpenCV_exercises/: CMakeLists.txt
Autonomous_Vehicles_and_Computer_Vision/detect_objects/: CMakeLists.txt  images
Autonomous_Vehicles_and_Computer_Vision/lidar_to_camera/: CMakeLists.txt  dat
SFND_2D_Feature_Tracking/: .gitignore  LICENSE  README.md  README.txt  README_student.md  images
SFND_2D_Feature_Tracking/src/: matching2D.hpp  (+2 more)
SFND_3D_Object_Tracking/: .gitignore  README.md  README_student.md  TTC_det_desc_comparison.csv  TTC_det_desc_comparison.ods  dat  images
SFND_Kalman/: CMakeLists.txt  EvaluateKFPerformance.cpp  Kalman.py  Kalman_Matrices.py  Lidar_and_Radar_Fusion.cpp
SFND_Kalman/Augmentation_Assignment_1/: CMakeLists.txt
SFND_Kalman/Augmentation_Assignment_1/src/: Dense  main.cpp  ukf.cpp
SFND_Kalman/Generating_Sigma_Points_Assignment_1/: CMakeLists.txt
SFND_Kalman/Generating_Sigma_Points_Assignment_1/src/: main.cpp  ukf.cpp
SFND_Kalman/Jacobian_Matrix_Part1/: CMakeLists.txt
SFND_Kalman/Jacobian_Matrix_Part1/src/: main.cpp
SFND_Kalman/Laser_Measurements_Part3/: CMakeLists.txt
SFND_Kalman/Laser_Measurements_Part3/src/: main.cpp  tracking.cpp
SFND_Kalman/Measurement_Prediction/: CMakeLists.txt
SFND_Kalman/Measurement_Prediction/src/: main.cpp  ukf.cpp
SFND_Kalman/Predict_Radar_Measurement/: CMakeLists.txt
SFND_Kalman/Predict_Radar_Measurement/src/: ukf.cpp
SFND_Kalman/Predicted_Mean_and_Covariance/: CMakeLists.txt
SFND_Kalman/Predicted_Mean_and_Covariance/src/: main.cpp  ukf.cpp
SFND_Kalman/Sigma_Point_Prediction/: CMakeLists.txt
SFND_Kalman/Sigma_Point_Prediction/src/: main.cpp  ukf.cpp
SFND_Kalman/UKF_Update/: CMakeLists.txt
SFND_Kalman/UKF_Update/src/: ukf.cpp  ukf.h
SFND_Lidar_Obstacle_Detection/: CMakeLists.txt  media
SFND_Lidar_Obstacle_Detection/src/: environment.cpp  processPointClouds.cpp  processPointClouds.h
SFND_Lidar_Obstacle_Detection/src/quiz/cluster/: CMakeLists.txt  cluster.cpp  cluster_lib.cpp  cluster_lib.h  kdtree.h
SFND_Lidar_Obstacle_Detection/src/quiz/ransac/: CMakeLists.txt  ransac2d.cpp  ransac3d.cpp  ransac_lib.h
SFND_Lidar_Obstacle_Detection/src/render/: render.cpp  render.h
SFND_Lidar_Obstacle_Detection/src/sensors/: lidar.h
SFND_Lidar_Obstacle_Detection/src/sensors/data/: pcd
SFND_Radar_Principles/: README  Radar_2D_CA_CFAR.m  Radar_2D_FFT.m  Radar_Angle_of_Arrival.m  Radar_CA_CFAR.m  Radar_Clustering.m  Radar_Doppler_Estimation.m  Radar_Equation.m  Radar_FFT.m  Radar_Kalman_Tracking.m  Radar_Range_Estimation.m  radar_target_generation_and_detection.m  sensor_fusion_with_radar.m
SFND_Unscented_Kalman_Filter/: .gitignore  CMakeLists.txt  README_student.md
SFND_Unscented_Kalman_Filter/src/: highway.h  ukf.cpp  ukf.h  ukf_alternative.cpp
SFND_Unscented_Kalman_Filter/src/render/: render.cpp  render.h
SFND_Unscented_Kalman_Filter/src/sensors/: lidar.h
source/: .gitignore  get_sources.md  get_sources.txt  pcd  yolo
(+23 files in other folders)
